--- a/src/Vista/UsuarioAdmin.form
+++ b/src/Vista/UsuarioAdmin.form
@@ -32,7 +32,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="jTabbedPane1" pref="473" max="32767" attributes="0"/>
+              <Component id="jTabbedPane1" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -260,11 +260,9 @@
             <Component class="javax.swing.JComboBox" name="comboxOperadorConsulta">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
+                  <StringArray count="2">
                     <StringItem index="0" value="Contenga"/>
-                    <StringItem index="1" value="Menor"/>
-                    <StringItem index="2" value="Mayor"/>
-                    <StringItem index="3" value="Igual"/>
+                    <StringItem index="1" value="Igual"/>
                   </StringArray>
                 </Property>
               </Properties>
